@@ -1,3 +1,4 @@
+ - Make Solver a subclass of Parametrized
  - Add support for localization of parameters
  - Redesign of parameter system
 0.5.11
